@@ -1,5 +1,6 @@
 Changes for 1.0.0
 
+ - [NTD-76] fixed incorrect processing of net.tcp.listen (Sasha)
  - [NTD-73] fixed problem with "Too many open files" by agent under Solaris 2.5, 2.6 (Sasha)
  - [NTD-82] size of the box for element label in maps is increased (Artem)
  - [NTD-78] fixed number of problems for "No false for B" on maps (Artem)
@@ -19,8 +20,8 @@ Changes for 1.0.0
  - [NTD-50] added support of net.if.in/out/total/collisions under FreeBSD (Sasha)
  - [NTD-52] fixed configuration script for net.tcp.dns* check processing (Sasha)
  - [NTD-61] fixed possible memory leak in autodiscovery actions (Sasha)
- - [NTD-55] added support od system.boottime under Solaris (Sasha)
- - [NTD-56] added support od system.cpu.load under Solaris 2.6 (Sasha)
+ - [NTD-55] added support of system.boottime under Solaris (Sasha)
+ - [NTD-56] added support of system.cpu.load under Solaris 2.6 (Sasha)
  - [NTD-59] DM: fixed memory leak in synchronization of node configuration (Sasha)
  - [NTD-60] fixed rare race condition in DBimplode_exp (Sasha)
  - [NTD-57] fixed wrong message on delete of maintenance period (Sasha)
